in API, serve forward dest configuration instead of just dest
